--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 authors = ["Scott Minor <minor@minorhacks.com>"]
-name = "advent_2021"
+edition = "2018"
+name = "advent_2018"
 version = "0.1.0"
-edition = "2021"
 
 [dependencies]
-rfnd-hello-world = "1.0.1"
+anyhow = "1.0.47"
+
+[dev-dependencies]
+table-test = "0.2"
 
 [package.metadata.raze]
-workspace_path = "//third_party/cargo"
+genmode = "Remote"
 package_aliases_dir = "third_party/cargo"
 targets = [
-    "x86_64-unknown-linux-gnu"
+  "x86_64-unknown-linux-gnu",
 ]
-genmode = "Remote"
+workspace_path = "//third_party/cargo"
