Can run day_01 via `bazel run`

--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -29,6 +29,7 @@ BINARIES = [
     rust_binary(
         name = b,
         srcs = ["bin/{}/main.rs".format(b)],
+        data = ["bin/{}/input.txt".format(b)],
         deps = [":advent_2018"],
     )
     for b in BINARIES
