--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ name = "advent_2021"
 version = "0.1.0"
 
 [dependencies]
+array2d = "0.2.1"
 anyhow = "1.0.47"
+itertools = "0.10.3"
 rayon = "1.5.1"
 
 [dev-dependencies]
